# vapoursynth-tivtc

./: .gitignore  README.md  build.zig  build.zig.zon  meson.build
.github/workflows/: ci.yml
src/: PluginInit.cpp  TDecimateMode2.cpp  TFM.cpp  TFM.h  TFMPP.cpp  TFMPlanar.cpp  common.zig  cpufeatures.cpp  cpufeatures.h  cycle.zig  main.zig  tdecimate.zig  tdecimate_core.zig  tfm.zig  tfm_core.zig  tfmpp.zig
tests/: pyproject.toml  run_tests.sh
tests/issues/: conftest.py  helpers.py  test_issue_3_y0y1.py  test_issue_4_mode2_crash.py  test_issue_5_determinism.py  test_issue_8_cache_warning.py  vspipe_helpers.py
